1999-05-12  Martin Baulig  <martin@home-of-linux.org>

	* canonicalize.c: Use `set_errno' instead of `__set_errno' and
	define `set_errno' here.

1999-03-27  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (supportexecincludedir): Rename from
	supportincludedir so that `gnomesupport.h' can be installed with
	`make install-exec'.
	(supportinclude_HEADERS): Remove.  Don't install popt-gnome.h
	twice.
	(error.o): Change `error.c: gnomesupport.h' dependency to
	`error.o: gnomesupport.h' to reflect actual dependency.

1999-02-19  Martin Baulig  <martin@home-of-linux.org>

	* canonicalize.c: Include <gnome-argp.h> instead of the removed
	<argp-namefrob.h>.

1999-02-17  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* poptint.h: Removed the suspicious `#ifdef HAVE_DGETTEXT...'
	switch.  Now `progname --help' messages should be translated.

1998-12-24  Jeff Garzik  <jgarzik@pobox.com>

	* poptparse.[ch]:  poptParseArgvString cleanups...
	Added array grow increment constant.
	Remove unnecessary 'dst' init.
	Remove unnecessary strcpy().
	Make arg 's' and var 'src' const-correct.

1998-12-21  Matt Wilson  <msw@redhat.com>

	* poptparse.c: fix pointer assignment

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* Makefile.am (libgnomesupport_la_SOURCES): added gnome-argp.c,
	which is needed for platforms without
	program_invocation_short_name and program_invocation_name.
	(libgnomesupport_la_LIBADD): reinstalled the correct value.

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am (EXTRA_DIST): Add all source and header files here.

1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_DIST): Add back `gnomesupport.awk' and
	`README-gnome'. 

1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>

	* popt.c (gnomesupport-fake.h): Include.
	* poptint.h (ENABLE_NLS): Define POPT_() and _() i18n markers
	based on this.

1998-11-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-fake.h: Include gnomesupport.h unconditionally.